target-demo/infra/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: target-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: target-ai.spinachsoftware.com
      http:
        paths:
          - backend:
              service:
                name: target-demo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - target-ai.spinachsoftware.com
      secretName: target-ai.spinachsoftware.com
